<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="currentUser"
            type="com.nishant.herosblood.models.UserData" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.EditUserProfileActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/back_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/txtEditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="@id/backBtn"
                    app:layout_constraintEnd_toStartOf="@id/imgSave"
                    app:layout_constraintStart_toEndOf="@id/backBtn"
                    app:layout_constraintTop_toTopOf="@id/backBtn" />

                <ImageView
                    android:id="@+id/imgSave"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/profile_picture"
                    android:src="@drawable/save_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_profilePicture"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/profile_picture"
                    android:src="@color/greyColor"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtEditProfile" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/changeProfilePicture"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/upload_photo_icon"
                    app:layout_constraintBottom_toBottomOf="@id/img_profilePicture"
                    app:layout_constraintEnd_toEndOf="@id/img_profilePicture" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:paddingStart="3dp"
                    android:paddingEnd="5dp"
                    android:text="@string/name"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_profilePicture" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/enter_your_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName|textCapWords"
                    android:labelFor="@id/name"
                    android:text="@{currentUser.name}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/txtName"
                    app:layout_constraintTop_toBottomOf="@id/txtName"
                    tools:ignore="LabelFor" />

                <LinearLayout
                    android:id="@+id/llWeightAndBloodGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="3dp"
                            android:paddingEnd="5dp"
                            android:text="@string/weight_in_kg"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/weight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="30dp"
                            android:hint="@string/your_weight"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:labelFor="@id/name"
                            android:text="@{}"
                            android:textColor="@color/black"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <Spinner
                        android:id="@+id/bloodGroupList"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="25dp"
                        android:layout_weight="1"
                        android:spinnerMode="dialog"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgPersonIcon" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:paddingStart="3dp"
                    android:paddingEnd="5dp"
                    android:text="@string/address"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/llWeightAndBloodGroup" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/enter_your_address"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName|textCapWords"
                    android:labelFor="@id/name"
                    android:text="@{currentUser.fullAddress}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/txtAddress"
                    app:layout_constraintTop_toBottomOf="@id/txtAddress" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:paddingStart="3dp"
                    android:paddingEnd="5dp"
                    android:text="@string/email"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/enter_your_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:labelFor="@id/name"
                    android:text="@{currentUser.email}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/txtEmail"
                    app:layout_constraintTop_toBottomOf="@id/txtEmail" />

                <TextView
                    android:id="@+id/txtMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:paddingStart="3dp"
                    android:paddingEnd="5dp"
                    android:text="@string/mobile_number"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email" />

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/enter_your_mobile_number"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:labelFor="@id/name"
                    android:text="@{currentUser.phoneNumber}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/txtMobile"
                    app:layout_constraintTop_toBottomOf="@id/txtMobile" />

                <LinearLayout
                    android:id="@+id/llBottomButtons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mobile">

                    <Button
                        android:id="@+id/btnCancel"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/cancel" />

                    <Button
                        android:id="@+id/btnSave"
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/save" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_rawRes="@raw/loading" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>