<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.nishant.herosblood.data.UserData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/redColor"
        tools:context=".ui.UserDashboardActivity">

        <TextView
            android:id="@+id/txt_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/high_tower"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/high_tower"
            android:text="@{user.name}"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/txt_hello"
            app:layout_constraintTop_toTopOf="@id/txt_hello" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/if_user_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/txt_hello"
            app:layout_constraintTop_toBottomOf="@id/txt_hello">

            <TextView
                android:id="@+id/txt_registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/high_tower"
                android:text="@string/registered_as_a_donor"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/verified_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/verifiedicon"
                android:src="@drawable/verified_icon"
                app:layout_constraintStart_toEndOf="@id/txt_registered"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/if_user_not_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/txt_hello"
            app:layout_constraintTop_toBottomOf="@id/txt_hello">

            <TextView
                android:id="@+id/txt_wantToBeDonor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/high_tower"
                android:text="@string/want_to_be_a_donor"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_donorClickHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/high_tower"
                android:text="@string/click_here"
                android:textColor="@color/blueColor"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/txt_wantToBeDonor"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/img_location"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/location_icon"
            android:src="@drawable/location_icon"
            app:layout_constraintStart_toStartOf="@id/txt_hello"
            app:layout_constraintTop_toBottomOf="@id/if_user_registered" />

        <TextView
            android:id="@+id/txt_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/high_tower"
            android:text="Dhimishri"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/img_location"
            app:layout_constraintStart_toEndOf="@id/img_location"
            app:layout_constraintTop_toTopOf="@id/img_location" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profilePicture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:src="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/img_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txt_hello" />

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/search_bg"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:hint="@string/search"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/greyColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_location" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_people"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/user_dashboard_people_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_search">

            <TextView
                android:id="@+id/txt_nearbyPeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/high_tower"
                android:text="@string/nearby_people"
                android:textColorHint="@color/greyColor"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_donorListUserDashboard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_nearbyPeople" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>